importar cartas dos decks de encontro

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,6 +1,15 @@
 * base de dados para salvar os decks, as cartas e as partidas
-    * usar ORM Peewee por ser leve e ter migrations
-    * usar SQLite por ser um banco de dados em um arquivo
+    * usar ORM Peewee por ser leve e ter migrations [OK]
+    * usar SQLite por ser um banco de dados em um arquivo [OK]
+
+BASE
+------------
+
+* importar cartas dos decks de encontro
+
+UI
+------------
+
 * interface de usuário (Kivy, KivyMD)
 * criar protótipo da interface de usuário
     * evento de clique do botão [OK]
@@ -17,5 +26,7 @@
 * deve ser possível repassar a partida do início ao fim
 * deve ser possível jogar offline com um ou mais decks
 * deve ser possível jogar online com um ou mais jogadores
+
+
 
 lord --decks
