#1 modificação do modelo e #2 função de importação

--- a/analise_planilha.ipynb
+++ b/analise_planilha.ipynb
@@ -17,7 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_excel('./cartas.xls')"
+    "df = pd.read_excel('./lord/data/cartas.xls')"
    ]
   },
   {
@@ -567,7 +567,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "c1c05db3",
+   "id": "18194266",
    "metadata": {},
    "outputs": [
     {
@@ -608,7 +608,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "500b997a",
+   "id": "713ab04a",
    "metadata": {},
    "outputs": [
     {
@@ -770,8 +770,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
-   "id": "d4cebd3a",
+   "execution_count": 64,
+   "id": "12681db5",
    "metadata": {},
    "outputs": [
     {
@@ -941,7 +941,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 22 columns</p>\n",
+       "<p>5 rows × 23 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -980,24 +980,24 @@
        "76  Spiders of Mirkwood NaN     2   \n",
        "77  Spiders of Mirkwood NaN     3   \n",
        "\n",
-       "                                                Notes Link Count       Box  \\\n",
-       "73  Note that this is a forced exhaust and you wou...  NaN   2.0  Core Set   \n",
-       "74  Forced: this damage ignores the Hero's Defense...  NaN   1.0  Core Set   \n",
-       "75                                                NaN  NaN   1.0  Core Set   \n",
-       "76                                                NaN  NaN   2.0  Core Set   \n",
-       "77  Travel: if you reveal a Treachery card it is r...  NaN   3.0  Core Set   \n",
+       "                                                Notes  Link Count       Box  \\\n",
+       "73  Note that this is a forced exhaust and you wou...   NaN   2.0  Core Set   \n",
+       "74  Forced: this damage ignores the Hero's Defense...   NaN   1.0  Core Set   \n",
+       "75                                                NaN   NaN   1.0  Core Set   \n",
+       "76                                                NaN   NaN   2.0  Core Set   \n",
+       "77  Travel: if you reveal a Treachery card it is r...   NaN   3.0  Core Set   \n",
        "\n",
-       "    Engage  \n",
-       "73    20.0  \n",
-       "74    40.0  \n",
-       "75    32.0  \n",
-       "76     NaN  \n",
-       "77     NaN  \n",
+       "   Engage  \n",
+       "73   20.0  \n",
+       "74   40.0  \n",
+       "75   32.0  \n",
+       "76    NaN  \n",
+       "77    NaN  \n",
        "\n",
-       "[5 rows x 22 columns]"
+       "[5 rows x 23 columns]"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1006,7 +1006,7 @@
     "tipos = \"Type in ['Enemy','Quest','Location','Treachery','Objective','Quest','Objective - Ally']\"\n",
     "campos = [\n",
     "    'Number', 'Name', 'Type', 'Unique', 'Text', 'Shadow','Abbr','Threat',\n",
-    "    'Traits','Keywords', 'HP', 'ATK', 'DEF', 'Cycle', 'Encounter Set', 'Q#',\n",
+    "    'Traits','Keywords', 'WP', 'HP', 'ATK', 'DEF', 'Cycle', 'Encounter Set', 'Q#',\n",
     "    'Quest', 'Notes', 'Link', 'Count','Box','Engage'\n",
     "]\n",
     "cartas = df.query(tipos)[campos]\n",
@@ -1015,30 +1015,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
-   "id": "19a7bec5",
+   "execution_count": 71,
+   "id": "260747ba",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array(['Enemy', 'Location', 'Treachery', 'Objective', 'Quest',\n",
-       "       'Objective - Ally'], dtype=object)"
+       "array([ 2.,  1.,  3.,  4.,  5., nan])"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cartas['Type'].unique()"
+    "cartas['Count'].unique()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "cb8dd7a8",
+   "id": "e7d12fc3",
    "metadata": {},
    "outputs": [
     {
@@ -1059,7 +1058,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "02129222",
+   "id": "6342529d",
    "metadata": {},
    "outputs": [
     {
@@ -1167,7 +1166,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ed05209a",
+   "id": "7192ec74",
    "metadata": {},
    "outputs": [],
    "source": []
