--- a/analise_planilha.ipynb
+++ b/analise_planilha.ipynb
@@ -770,7 +770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "id": "fb80157a",
    "metadata": {},
    "outputs": [
@@ -806,7 +806,6 @@
        "      <th>Traits</th>\n",
        "      <th>Keywords</th>\n",
        "      <th>...</th>\n",
-       "      <th>DEF</th>\n",
        "      <th>Cycle</th>\n",
        "      <th>Encounter Set</th>\n",
        "      <th>Q#</th>\n",
@@ -816,6 +815,7 @@
        "      <th>Count</th>\n",
        "      <th>Box</th>\n",
        "      <th>Engage</th>\n",
+       "      <th>Victory</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -832,7 +832,6 @@
        "      <td>Creature. Spider.</td>\n",
        "      <td>NaN</td>\n",
        "      <td>...</td>\n",
-       "      <td>1</td>\n",
        "      <td>Shadows of Mirkwood</td>\n",
        "      <td>Spiders of Mirkwood</td>\n",
        "      <td>NaN</td>\n",
@@ -842,6 +841,7 @@
        "      <td>2.0</td>\n",
        "      <td>Core Set</td>\n",
        "      <td>20.0</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>74</th>\n",
@@ -856,7 +856,6 @@
        "      <td>Creature. Insect.</td>\n",
        "      <td>NaN</td>\n",
        "      <td>...</td>\n",
-       "      <td>0</td>\n",
        "      <td>Shadows of Mirkwood</td>\n",
        "      <td>Spiders of Mirkwood</td>\n",
        "      <td>NaN</td>\n",
@@ -866,6 +865,7 @@
        "      <td>1.0</td>\n",
        "      <td>Core Set</td>\n",
        "      <td>40.0</td>\n",
+       "      <td>5.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>75</th>\n",
@@ -880,7 +880,6 @@
        "      <td>Creature. Spider.</td>\n",
        "      <td>NaN</td>\n",
        "      <td>...</td>\n",
-       "      <td>2</td>\n",
        "      <td>Shadows of Mirkwood</td>\n",
        "      <td>Spiders of Mirkwood</td>\n",
        "      <td>NaN</td>\n",
@@ -890,6 +889,7 @@
        "      <td>1.0</td>\n",
        "      <td>Core Set</td>\n",
        "      <td>32.0</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>76</th>\n",
@@ -904,7 +904,6 @@
        "      <td>Forest.</td>\n",
        "      <td>NaN</td>\n",
        "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>Shadows of Mirkwood</td>\n",
        "      <td>Spiders of Mirkwood</td>\n",
        "      <td>NaN</td>\n",
@@ -913,6 +912,7 @@
        "      <td>NaN</td>\n",
        "      <td>2.0</td>\n",
        "      <td>Core Set</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -928,7 +928,6 @@
        "      <td>Forest. Mountain.</td>\n",
        "      <td>NaN</td>\n",
        "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>Shadows of Mirkwood</td>\n",
        "      <td>Spiders of Mirkwood</td>\n",
        "      <td>NaN</td>\n",
@@ -938,10 +937,11 @@
        "      <td>3.0</td>\n",
        "      <td>Core Set</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 23 columns</p>\n",
+       "<p>5 rows × 24 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -966,38 +966,31 @@
        "76                                                NaN  Core      2   \n",
        "77                                                NaN  Core      2   \n",
        "\n",
-       "               Traits Keywords  ...  DEF                Cycle  \\\n",
-       "73  Creature. Spider.      NaN  ...    1  Shadows of Mirkwood   \n",
-       "74  Creature. Insect.      NaN  ...    0  Shadows of Mirkwood   \n",
-       "75  Creature. Spider.      NaN  ...    2  Shadows of Mirkwood   \n",
-       "76            Forest.      NaN  ...  NaN  Shadows of Mirkwood   \n",
-       "77  Forest. Mountain.      NaN  ...  NaN  Shadows of Mirkwood   \n",
+       "               Traits Keywords  ...                Cycle        Encounter Set  \\\n",
+       "73  Creature. Spider.      NaN  ...  Shadows of Mirkwood  Spiders of Mirkwood   \n",
+       "74  Creature. Insect.      NaN  ...  Shadows of Mirkwood  Spiders of Mirkwood   \n",
+       "75  Creature. Spider.      NaN  ...  Shadows of Mirkwood  Spiders of Mirkwood   \n",
+       "76            Forest.      NaN  ...  Shadows of Mirkwood  Spiders of Mirkwood   \n",
+       "77  Forest. Mountain.      NaN  ...  Shadows of Mirkwood  Spiders of Mirkwood   \n",
        "\n",
-       "          Encounter Set  Q# Quest  \\\n",
-       "73  Spiders of Mirkwood NaN   NaN   \n",
-       "74  Spiders of Mirkwood NaN   NaN   \n",
-       "75  Spiders of Mirkwood NaN   NaN   \n",
-       "76  Spiders of Mirkwood NaN     2   \n",
-       "77  Spiders of Mirkwood NaN     3   \n",
+       "    Q# Quest                                              Notes Link  Count  \\\n",
+       "73 NaN   NaN  Note that this is a forced exhaust and you wou...  NaN    2.0   \n",
+       "74 NaN   NaN  Forced: this damage ignores the Hero's Defense...  NaN    1.0   \n",
+       "75 NaN   NaN                                                NaN  NaN    1.0   \n",
+       "76 NaN     2                                                NaN  NaN    2.0   \n",
+       "77 NaN     3  Travel: if you reveal a Treachery card it is r...  NaN    3.0   \n",
        "\n",
-       "                                                Notes  Link Count       Box  \\\n",
-       "73  Note that this is a forced exhaust and you wou...   NaN   2.0  Core Set   \n",
-       "74  Forced: this damage ignores the Hero's Defense...   NaN   1.0  Core Set   \n",
-       "75                                                NaN   NaN   1.0  Core Set   \n",
-       "76                                                NaN   NaN   2.0  Core Set   \n",
-       "77  Travel: if you reveal a Treachery card it is r...   NaN   3.0  Core Set   \n",
+       "         Box Engage Victory  \n",
+       "73  Core Set   20.0     NaN  \n",
+       "74  Core Set   40.0     5.0  \n",
+       "75  Core Set   32.0     NaN  \n",
+       "76  Core Set    NaN     NaN  \n",
+       "77  Core Set    NaN     NaN  \n",
        "\n",
-       "   Engage  \n",
-       "73   20.0  \n",
-       "74   40.0  \n",
-       "75   32.0  \n",
-       "76    NaN  \n",
-       "77    NaN  \n",
-       "\n",
-       "[5 rows x 23 columns]"
+       "[5 rows x 24 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1007,7 +1000,7 @@
     "campos = [\n",
     "    'Number', 'Name', 'Type', 'Unique', 'Text', 'Shadow','Abbr','Threat',\n",
     "    'Traits','Keywords', 'WP', 'HP', 'ATK', 'DEF', 'Cycle', 'Encounter Set', 'Q#',\n",
-    "    'Quest', 'Notes', 'Link', 'Count','Box','Engage'\n",
+    "    'Quest', 'Notes', 'Link', 'Count','Box','Engage','Victory'\n",
     "]\n",
     "cartas = df.query(tipos)[campos]\n",
     "cartas.head()"
